[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-router-openai-proxy"
version = "0.1.0"
description = "Minimal starter for an agent context router and OpenAI-compatible proxy flow"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Team" }]
dependencies = []

[project.scripts]
agent-context-router = "agent_context_router.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
